# AutoConfig

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  collect_and_visualize.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  run_local.sh  server.py  setup.cfg  setup.sh  webpack.config.js
.github/workflows/: ci.yml  docs.yml
ansible/: collect_facts.yml
autoconfig/: server.py
docker/: nginx.conf
docs/source/: cli.rst  conf.py  examples.rst  index.rst  rest_api.rst  setup.rst  tests.rst
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AppRoutes.tsx  Layout.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Simulations.tsx
scripts/: collect_and_visualize.py
src/worker/: README.md
src/worker/cmd/: main.py
src/worker/config/: __init__.py
src/worker/internal/: broker.py
src/worker/pkg/plugins/: __init__.py  ddos.py  noop.py
templates/: index.html.j2  nginx.conf.j2
tests/: test_collect.py  test_collect_local.py  test_server.py  test_server_auth.py  test_server_filters.py  test_server_reload.py  test_templates.py  test_worker_plugins.py
web/: App.jsx  Charts.jsx
